[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/sxgd/assets/fonts/Jost-400-Book.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://screens/LevelEditor/DetailPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://screens/LevelEditor/GridPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://screens/LevelEditor/LevelEditor.gd" type="Script" id=4]
[ext_resource path="res://screens/LevelEditor/HelpPanel.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 18
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 12
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="LevelEditor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 4 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="DetailPanelContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_top = 40

[node name="DetailPanel" parent="Panel/DetailPanelContainer" instance=ExtResource( 2 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 40.0
margin_right = 832.0
margin_bottom = 480.0

[node name="GridPanel" parent="Panel" instance=ExtResource( 3 )]

[node name="HelpPanel" parent="Panel" instance=ExtResource( 5 )]
visible = false

[node name="TopContainer" type="MarginContainer" parent="Panel"]
margin_right = 832.0
margin_bottom = 49.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="Background" type="ColorRect" parent="Panel/TopContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 824.0
margin_bottom = 41.0
color = Color( 0.0823529, 0.0823529, 0.0823529, 0.501961 )

[node name="TopBar" type="HBoxContainer" parent="Panel/TopContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 824.0
margin_bottom = 41.0
rect_min_size = Vector2( 0, 32 )

[node name="Left" type="HBoxContainer" parent="Panel/TopContainer/TopBar"]
margin_right = 607.0
margin_bottom = 33.0
size_flags_horizontal = 3

[node name="Grid" type="Button" parent="Panel/TopContainer/TopBar/Left"]
margin_right = 96.0
margin_bottom = 33.0
rect_min_size = Vector2( 96, 0 )
custom_fonts/font = SubResource( 1 )
text = "Grid"
flat = true

[node name="Details" type="Button" parent="Panel/TopContainer/TopBar/Left"]
margin_left = 100.0
margin_right = 196.0
margin_bottom = 33.0
rect_min_size = Vector2( 96, 0 )
custom_fonts/font = SubResource( 1 )
toggle_mode = true
pressed = true
text = "Details"
flat = true

[node name="Help" type="Button" parent="Panel/TopContainer/TopBar/Left"]
margin_left = 200.0
margin_right = 296.0
margin_bottom = 33.0
rect_min_size = Vector2( 96, 0 )
custom_fonts/font = SubResource( 1 )
toggle_mode = true
pressed = true
text = "Help"
flat = true

[node name="Right" type="HBoxContainer" parent="Panel/TopContainer/TopBar"]
margin_left = 611.0
margin_right = 816.0
margin_bottom = 33.0
alignment = 2

[node name="Play" type="Button" parent="Panel/TopContainer/TopBar/Right"]
margin_right = 48.0
margin_bottom = 33.0
rect_min_size = Vector2( 48, 0 )
custom_fonts/font = SubResource( 1 )
text = "Play"
flat = true

[node name="Save" type="MenuButton" parent="Panel/TopContainer/TopBar/Right"]
margin_left = 52.0
margin_right = 100.0
margin_bottom = 33.0
rect_min_size = Vector2( 48, 0 )
custom_fonts/font = SubResource( 1 )
text = "Save"
items = [ "User data...", null, 0, false, false, 0, 0, null, "", false, "Source...", null, 0, false, false, 1, 0, null, "", false, "Base64...", null, 0, false, false, 2, 0, null, "", false ]

[node name="Load" type="MenuButton" parent="Panel/TopContainer/TopBar/Right"]
margin_left = 104.0
margin_right = 153.0
margin_bottom = 33.0
rect_min_size = Vector2( 48, 0 )
custom_fonts/font = SubResource( 1 )
text = "Load"
items = [ "Binary (User data)...", null, 0, false, false, 0, 0, null, "", false, "Scene (Source)...", null, 0, false, false, 1, 0, null, "", false, "Binary (Source)...", null, 0, false, false, 2, 0, null, "", false, "Base64...", null, 0, false, false, 3, 0, null, "", false ]
switch_on_hover = true

[node name="Exit" type="Button" parent="Panel/TopContainer/TopBar/Right"]
margin_left = 157.0
margin_right = 205.0
margin_bottom = 33.0
rect_min_size = Vector2( 48, 0 )
custom_fonts/font = SubResource( 1 )
text = "Exit"
flat = true

[node name="SaveDialog" type="FileDialog" parent="."]
margin_right = 315.0
margin_bottom = 130.0
popup_exclusive = true
resizable = true
access = 1
filters = PoolStringArray( "*.lvl; Level" )
current_dir = "user://levels"
current_path = "user://levels/"

[node name="SaveSystemDialog" type="FileDialog" parent="."]
margin_right = 315.0
margin_bottom = 130.0
popup_exclusive = true
resizable = true
filters = PoolStringArray( "*.lvl; Level" )
current_dir = "res://assets/levels"
current_path = "res://assets/levels/"

[node name="LoadDialog" type="FileDialog" parent="."]
margin_right = 315.0
margin_bottom = 130.0
popup_exclusive = true
window_title = "Open a File"
resizable = true
mode = 0
access = 1
filters = PoolStringArray( "*.lvl; Level" )
current_dir = "user://levels"
current_path = "user://levels/"

[node name="LoadSceneDialog" type="FileDialog" parent="."]
margin_right = 315.0
margin_bottom = 130.0
popup_exclusive = true
window_title = "Open a File"
resizable = true
mode = 0
filters = PoolStringArray( "*.tscn; Level scene" )
current_dir = "res://levels"
current_path = "res://levels/"

[node name="LoadSystemDialog" type="FileDialog" parent="."]
margin_right = 315.0
margin_bottom = 130.0
popup_exclusive = true
window_title = "Open a File"
resizable = true
mode = 0
filters = PoolStringArray( "*.lvl; Level" )
current_dir = "res://assets/levels"
current_path = "res://assets/levels/"

[node name="ExportDialog" type="AcceptDialog" parent="."]
margin_right = 83.0
margin_bottom = 58.0
rect_min_size = Vector2( 400, 300 )
window_title = "Share your level"
dialog_autowrap = true

[node name="MarginContainer" type="MarginContainer" parent="ExportDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -36.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 34

[node name="VBoxContainer" type="VBoxContainer" parent="ExportDialog/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 376.0
margin_bottom = 222.0

[node name="TextEdit" type="TextEdit" parent="ExportDialog/MarginContainer/VBoxContainer"]
margin_right = 384.0
margin_bottom = 234.0
size_flags_vertical = 3
readonly = true
wrap_enabled = true

[node name="Button" type="Button" parent="ExportDialog/MarginContainer/VBoxContainer"]
margin_left = 130.0
margin_top = 238.0
margin_right = 253.0
margin_bottom = 258.0
size_flags_horizontal = 4
text = "Copy to clipboard"

[node name="ImportDialog" type="ConfirmationDialog" parent="."]
margin_right = 83.0
margin_bottom = 58.0
rect_min_size = Vector2( 400, 300 )
window_title = "Import a level"
dialog_autowrap = true

[node name="MarginContainer" type="MarginContainer" parent="ImportDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -36.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 34

[node name="VBoxContainer" type="VBoxContainer" parent="ImportDialog/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 376.0
margin_bottom = 222.0

[node name="TextEdit" type="TextEdit" parent="ImportDialog/MarginContainer/VBoxContainer"]
margin_right = 384.0
margin_bottom = 234.0
size_flags_vertical = 3
wrap_enabled = true

[node name="Button" type="Button" parent="ImportDialog/MarginContainer/VBoxContainer"]
margin_left = 122.0
margin_top = 238.0
margin_right = 262.0
margin_bottom = 258.0
size_flags_horizontal = 4
text = "Copy from clipboard"

[node name="ExitDialog" type="ConfirmationDialog" parent="."]
margin_right = 200.0
margin_bottom = 70.0
popup_exclusive = true
dialog_text = "Are you sure you want to exit the editor?"

[node name="LevelPanel" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LevelContainer" type="Control" parent="LevelPanel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GameOverlay" type="CanvasLayer" parent="LevelPanel"]
layer = 2

[node name="ParentOverlay" type="Control" parent="LevelPanel/GameOverlay"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TopContainer" type="MarginContainer" parent="LevelPanel/GameOverlay/ParentOverlay"]
margin_right = 832.0
margin_bottom = 49.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="Background" type="ColorRect" parent="LevelPanel/GameOverlay/ParentOverlay/TopContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 824.0
margin_bottom = 41.0
color = Color( 0.0823529, 0.0823529, 0.0823529, 0.498039 )

[node name="TopBar" type="HBoxContainer" parent="LevelPanel/GameOverlay/ParentOverlay/TopContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 824.0
margin_bottom = 41.0
rect_min_size = Vector2( 0, 32 )
alignment = 2

[node name="Right" type="HBoxContainer" parent="LevelPanel/GameOverlay/ParentOverlay/TopContainer/TopBar"]
margin_left = 768.0
margin_right = 816.0
margin_bottom = 33.0
alignment = 2

[node name="Stop" type="Button" parent="LevelPanel/GameOverlay/ParentOverlay/TopContainer/TopBar/Right"]
margin_right = 48.0
margin_bottom = 33.0
rect_min_size = Vector2( 48, 0 )
custom_fonts/font = SubResource( 1 )
text = "Stop"
flat = true

[node name="HUD" type="MarginContainer" parent="LevelPanel/GameOverlay/ParentOverlay"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -195.0
margin_top = -119.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 60

[node name="Instructions" type="Label" parent="LevelPanel/GameOverlay/ParentOverlay/HUD"]
modulate = Color( 1, 1, 1, 0.498039 )
margin_left = 20.0
margin_top = 20.0
margin_right = 175.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 2 )
text = "RETURN  - Replay level
ESC - Stop"
